# MyCuteAssistant

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.txt  CMakeLists.txt  LICENSE.txt  README.md
characters/: CMakeLists.txt
chars/: CMakeLists.txt
chars/default/: properties.ini
cmake/: directories.cmake  resources.cmake
docs/: CMakeLists.txt  index.html  style.css
src/: AboutDialog.cpp  AboutDialog.hpp  AvatarWindow.cpp  AvatarWindow.hpp  BubbleWindow.cpp  BubbleWindow.hpp  CMakeLists.txt  Character.cpp  Character.hpp  Config.cpp  Config.hpp  GlobalHotkey.cpp  GlobalHotkey.hpp  MyCuteAssistant.cbp  TrayIcon.cpp  TrayIcon.hpp  config.h.in  main.cpp  resources.h  version.h  version.rc
